--- a/public/styles/site/index.less
+++ b/public/styles/site/index.less
@@ -53,7 +53,7 @@
 	}
 }
 
-section.currently, section.about {
+.currently, section.about {
 	.clearfix();
 
 	.program, .leprojet-link {
@@ -86,7 +86,7 @@ section.currently, section.about {
 	}
 }
 
-section.currently {
+.currently {
 	margin-top: 90px;
 	a {
 		height: 100px;
@@ -305,7 +305,7 @@ section.new-posts .heading-wrapper {
 		padding: 80px @margin-mobile - @gutter / 2 80px @margin-mobile - @gutter / 2;
 	}
 
-	section.currently, section.about {
+	.currently, section.about {
 		.program, .leprojet-link {
 			width: 100%;
 		}
@@ -315,7 +315,7 @@ section.new-posts .heading-wrapper {
 		}
 	}
 
-	section.currently {
+	.currently {
 		a {
 			height: 150px!important;
 		}
