--- a/public/styles/site/articles.less
+++ b/public/styles/site/articles.less
@@ -79,19 +79,25 @@ section.articles {
 
 	.post {
 		.clearfix();
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		outline: 1px solid fade(@black, 5%);
 		width: 25vw;
 		height: 25vw;
+		outline: 1px solid fade(@black, 5%);
 		position: relative;
-		padding: 10px;
 		background: pink;
 		float: left;
-		box-sizing: border-box;
 		overflow: hidden;
 		transition: background 0.2s ease;
+
+		a {
+			.clearfix();
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 100%;
+			height: 100%;
+			padding: 10px;
+			box-sizing: border-box;
+		}
 
 		&:nth-child(1n+0) {
 			background: @color2-e;
@@ -128,6 +134,7 @@ section.articles {
 
 		.post-title {
 			color: @white;
+			margin: 0;
 			font-size: 3.5vw;
 			font-weight: 900;;
 			word-wrap: break-word;
@@ -135,6 +142,10 @@ section.articles {
 			&.few-words {
 				font-size: 6vw;
 				font-weight: 700;
+			}
+
+			&.hidden-title {
+				.assistive-hide();
 			}
 
 			&:not(.few-words) {
