--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -22,7 +22,7 @@ html(lang="fr")
 		//- link(href="/styles/print.min.css" type="text/css" rel="stylesheet" media="print")
 
 		//- JAVASCRIPT
-		script(src="/js/script.min.js" async)
+		script(src="/js/script.min.js" defer)
 
 		//- Include template-specific stylesheets by extending the css block
 		block css
@@ -48,7 +48,7 @@ html(lang="fr")
 						a(href="/")
 							include ../../public/images/logo.svg
 							span= process.env.WEBSITE_NAME
-					nav.links-container(role="navigation")
+					nav.links-container
 						ul
 							each link in navLinks
 								li(class=(section == link.key ? 'active' : null)): a(href=link.href)= link.label
@@ -82,57 +82,56 @@ html(lang="fr")
 		//- FOOTER
 		if !contactPage
 			footer
-				address
-					if indexPage
-						.footer-heading-wrapper
-							h2 Nous contacter
-					.logo-wrapper
-						include ../../public/images/logo.svg
-					.address
-						h2 Adresse
-						if data.contact.address.street1
-							span= data.contact.address.street1
-						if data.contact.address.postcode || data.contact.address.suburb
-							span
-								if data.contact.address.postcode
-									| #{data.contact.address.postcode} 
-								if data.contact.address.suburb
-									| #{data.contact.address.suburb}
-						if data.contact.address.country
-							span= data.contact.address.country
-					.contact
-						h2 Contact
-						if data.contact.phone
-							span T / #{data.contact.phone} 
-						if data.contact.mobilePhone
-							span T / #{data.contact.mobilePhone} 
-						if data.contact.email
-							a(href='mailto:'+data.contact.email)= data.contact.email
-					.follow
-						h2 Suivez-nous
-						if data.contact.socials.facebook
-							a(href=data.contact.socials.facebook target="_blank") facebook
-						if data.contact.socials.twitter
-							a(href=data.contact.socials.twitter target="_blank") twitter
-						if data.contact.socials.linkedin
-							a(href=data.contact.socials.linkedin target="_blank") linkedin
-						form.custom-form.newsletter(method='post' action='/newsletter' onsubmit='return submitNewsletter(this);' autocomplete='on')
-							h3 newsletter
-							input.action(type='hidden', name='action', value='newsletter')
-							.field
-								label(for='email') Email
-								input(type='email', name='email', placeholder='Entrez votre email ici')
-							button(type='submit')
-								span.button-text Envoyer
-								span.loader
-							.result-box
-				div.admin-login
-					if user
-						if user.canAccessKeystone
-							a(href='/keystone' target="_blank") Ouvrir l'interface administrateur
-						a(href='/keystone/signout') Se déconnecter
-					else
-						a(href='/keystone/signin' target="_blank") Accès administrateur
+				if indexPage
+					.footer-heading-wrapper
+						h2 Nous contacter
+				.logo-wrapper
+					include ../../public/images/logo.svg
+				.address
+					h2 Adresse
+					if data.contact.address.street1
+						span= data.contact.address.street1
+					if data.contact.address.postcode || data.contact.address.suburb
+						span
+							if data.contact.address.postcode
+								| #{data.contact.address.postcode} 
+							if data.contact.address.suburb
+								| #{data.contact.address.suburb}
+					if data.contact.address.country
+						span= data.contact.address.country
+				.contact
+					h2 Contact
+					if data.contact.phone
+						span T / #{data.contact.phone} 
+					if data.contact.mobilePhone
+						span T / #{data.contact.mobilePhone} 
+					if data.contact.email
+						a(href='mailto:'+data.contact.email)= data.contact.email
+				.follow
+					h2 Suivez-nous
+					if data.contact.socials.facebook
+						a(href=data.contact.socials.facebook target="_blank") facebook
+					if data.contact.socials.twitter
+						a(href=data.contact.socials.twitter target="_blank") twitter
+					if data.contact.socials.linkedin
+						a(href=data.contact.socials.linkedin target="_blank") linkedin
+					form.custom-form.newsletter(method='post' action='/newsletter' onsubmit='return submitNewsletter(this);' autocomplete='on')
+						h3 newsletter
+						input.action(type='hidden', name='action', value='newsletter')
+						.field
+							label(for='email-newsletter') Email
+							input#email-newsletter(type='email', name='email', placeholder='Entrez votre email ici')
+						button(type='submit')
+							span.button-text Envoyer
+							span.loader
+						.result-box
+			div.admin-login
+				if user
+					if user.canAccessKeystone
+						a(href='/keystone' target="_blank") Ouvrir l'interface administrateur
+					a(href='/keystone/signout') Se déconnecter
+				else
+					a(href='/keystone/signin' target="_blank") Accès administrateur
 
 		// SCRIPT
 		block js
