--- a/templates/views/contact.pug
+++ b/templates/views/contact.pug
@@ -11,7 +11,7 @@ block content
 		#map
 		h1 Nous contacter
 		.contact-wrapper
-			address.contact-card
+			.contact-card
 				include ../../public/images/logo.svg
 				p.address
 					if data.contact.address.street1
